# realtime-restaurant-insights

./: .gitignore  README.md
ELK/: docker-compose.yml  import_to_elasticsearch.py
data/: kafka_messages.csv
data-ingestion-kedro/: README.md  pyproject.toml  session_store.db
data-ingestion-kedro/conf/base/: catalog.yml
data-ingestion-kedro/src/data_ingestion_kedro/: __init__.py  __main__.py  pipeline_registry.py
data-ingestion-kedro/src/data_ingestion_kedro/nodes/: data_collection.py  data_insertion.py
data-ingestion-kedro/src/data_ingestion_kedro/pipelines/: pipeline.py
data-ingestion-kedro/tests/: test_run.py
kedro-airflow/dags/: kedro_airflow_dag.py  sentiment_analysis_kafka_dag.py
notebook/: EDA.ipynb
script/: getApi.py  getApi_Alim.py  preprocessing.py  test.py
sentiment_analysis_kafka/: docker-compose.yml  requirements.txt  sentiment_analysis.py
spark/: kafka_to_spark.py
