[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "data_ingestion_kedro"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
data-ingestion-kedro = "data_ingestion_kedro.__main__:main"

[project.optional-dependencies]
dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.1.8",]

[tool.kedro]
package_name = "data_ingestion_kedro"
project_name = "data_ingestion_kedro"
kedro_init_version = "0.19.9"
tools = [ "Linting", "Testing", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/data_ingestion_kedro -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "data_ingestion_kedro.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "35702bf03e434e24a3442edac3d71244"
